LEXSYSTEST-45 - Updated Docker scripts to pull NCI's CentOS 7/Tomcat 8.5 (cbiit/centos7_tomcat85) image.  This required modifications to our existing scripts.